fix word wrap (#2347)

--- a/components/page/founder-guides/ArticleContent/ArticleContent.module.scss
+++ b/components/page/founder-guides/ArticleContent/ArticleContent.module.scss
@@ -572,6 +572,7 @@
   line-height: 24px;
   letter-spacing: -0.3px;
   text-decoration: none;
+  word-break: break-all;
 
   @include tablet-landscape {
     font-size: 16px;
